Add button numbers

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,8 +9,41 @@
 <ion-content>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
-      <ion-col size="8">
+      <ion-col size="12">
         <app-display currentValue="{{displayValue}}"></app-display>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <app-number-button value="1"></app-number-button>
+      </ion-col>
+      <ion-col size="4">
+        <app-number-button value="2"></app-number-button>
+      </ion-col>
+      <ion-col size="4">
+        <app-number-button value="3"></app-number-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <app-number-button value="4"></app-number-button>
+      </ion-col>
+      <ion-col size="4">
+        <app-number-button value="5"></app-number-button>
+      </ion-col>
+      <ion-col size="4">
+        <app-number-button value="6"></app-number-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <app-number-button value="7"></app-number-button>
+      </ion-col>
+      <ion-col size="4">
+        <app-number-button value="8"></app-number-button>
+      </ion-col>
+      <ion-col size="4">
+        <app-number-button value="9"></app-number-button>
       </ion-col>
     </ion-row>
   </ion-grid>
