--- a/src/app/components/number-button/number-button.component.html
+++ b/src/app/components/number-button/number-button.component.html
@@ -1,1 +1,3 @@
-<button (click)="clickEvent()"><div class="number-button">{{ value }}</div></button>
+<button [ngStyle]="{'background': color}" (click)="clickEvent()">
+    <div class="number-button">{{ value }}</div>
+</button>
