--- a/src/app/components/number-button/number-button.component.scss
+++ b/src/app/components/number-button/number-button.component.scss
@@ -2,6 +2,10 @@ button {
     height: 100%;
     width: 100%;
     border: 1px solid black;
-    background: #33daef;
     color: black;
+}
+
+
+.number-button{
+    padding: 20px;
 }
