--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,4 +1,12 @@
-ion-row,
+
+grid-widthion-row,
 ion-col {
     padding: 0;
+}
+
+.grid-width{
+    max-width: 300px;
+    position: absolute;
+    top: 20%;
+    left: 40%;
 }
