--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,58 +15,58 @@
     </ion-row>
     <ion-row>
       <ion-col size="3">
-        <app-number-button value="7" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="7" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="8" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="8" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="9" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="9" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="x" [color]="'#f1b76c'" (change)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="3">
-        <app-number-button value="4" (change)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-      <ion-col size="3">
-        <app-number-button value="5" (change)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-      <ion-col size="3">
-        <app-number-button value="6" (change)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-      <ion-col size="3">
-        <app-number-button value="-" [color]="'#f1b76c'" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="x" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="3">
-        <app-number-button value="1" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="4" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="2" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="5" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="3" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="6" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="+" [color]="'#f1b76c'" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="-" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="3">
-        <app-number-button value="0" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="1" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="." (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="2" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="=" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="3" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="/" [color]="'#f1b76c'" (change)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="+" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+        <app-number-button value="0" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+      <ion-col size="3">
+        <app-number-button value="." (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+      <ion-col size="3">
+        <app-number-button value="=" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+      <ion-col size="3">
+        <app-number-button value="/" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
     </ion-row>
   </ion-grid>
