--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,4 +1,5 @@
-
 <div class="container">
-  <div class="displayValue">{{currentValue}}</div>
+  <div class="displayValue">
+    <p>{{currentValue}}</p>
+  </div>
 </div>
