--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -67,6 +67,9 @@
       </ion-col>
       <ion-col size="3">
         <app-number-button value="/" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
+    <ion-row>
+      <ion-col size="12">
+        <app-clean-btn [color]="clearColor" (click)="cleanDisplay()"></app-clean-btn>
       </ion-col>
     </ion-row>
   </ion-grid>
