--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,58 +15,60 @@
     </ion-row>
     <ion-row>
       <ion-col size="3">
-        <app-number-button value="7" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="7" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="8" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="8" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="9" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="9" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="*" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="3">
-        <app-number-button value="4" (numberClick)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-      <ion-col size="3">
-        <app-number-button value="5" (numberClick)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-      <ion-col size="3">
-        <app-number-button value="6" (numberClick)="updateDisplayValue($event)"></app-number-button>
-      </ion-col>
-      <ion-col size="3">
-        <app-number-button value="-" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="*" [color]="functionColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="3">
-        <app-number-button value="1" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="4" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="2" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="5" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="3" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="6" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="+" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="-" [color]="functionColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="3">
-        <app-number-button value="0" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="1" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="." (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="2"  [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-result-btn [color]="'#f1b76c'" (click)="displayResult()"></app-result-btn>
+        <app-number-button value="3" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
       </ion-col>
       <ion-col size="3">
-        <app-number-button value="/" [color]="'#f1b76c'" (numberClick)="updateDisplayValue($event)"></app-number-button>
+        <app-number-button value="+" [color]="functionColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+        <app-number-button value="0" [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+      <ion-col size="3">
+        <app-number-button value="." [color]="numberColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+      <ion-col size="3">
+        <app-result-btn [color]="functionColor" (click)="displayResult()"></app-result-btn>
+      </ion-col>
+      <ion-col size="3">
+        <app-number-button value="/" [color]="functionColor" (numberClick)="updateDisplayValue($event)"></app-number-button>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col size="12">
         <app-clean-btn [color]="clearColor" (click)="cleanDisplay()"></app-clean-btn>
