--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,12 +1,17 @@
-
 grid-widthion-row,
 ion-col {
-    padding: 0;
+  padding: 0;
 }
 
-.grid-width{
-    max-width: 500px;
-    position: absolute;
-    top: 20%;
-    left: 40%;
+.grid-width {
+  max-width: 500px;
+  position: absolute;
+  top: 20%;
+  left: 40%;
+}
+
+.title {
+  --background: #3f5665;
+  color: #fff;
+  text-align: center;
 }
