add beauty to page

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -4,10 +4,11 @@ ion-col {
 }
 
 .grid-width {
-  max-width: 500px;
-  position: absolute;
-  top: 20%;
-  left: 40%;
+  max-width: 320px;
+  position: relative;
+  top: 15%;
+  margin: auto;
+}
 }
 
 .title {
