--- a/src/app/components/clean-btn/clean-btn.component.html
+++ b/src/app/components/clean-btn/clean-btn.component.html
@@ -1,3 +1,3 @@
 <button [ngStyle]="{'background': color}" (click)="clickEvent()">
-  <div class="text">Clean</div>
+  <div class="text">Clear</div>
 </button>
