--- a/src/app/components/number-button/number-button.component.scss
+++ b/src/app/components/number-button/number-button.component.scss
@@ -1,11 +1,11 @@
 button {
-    height: 100%;
-    width: 100%;
-    outline: 1px solid black;
-    color: black;
+  height: 100%;
+  width: 100%;
+  outline: 1px solid black;
+  color: black;
 }
 
-
-.number-button{
-    padding: 20px;
+.number-button {
+  padding: 25px;
+  font-size: 16px;
 }
