--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -11,6 +11,7 @@ ion-col {
 }
 
 .background__image {
+  transition: background-image 1s ease-in-out;
   background-image: url("/assets/images/cofee.jpeg");
   background-size: cover;
   width: 100%;
