--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -23,3 +23,7 @@ ion-col {
   color: #fff;
   text-align: center;
 }
+
+.demon-background {
+  background-image: url("/assets/images/demon_sebastian.jpg");
+}
