--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,8 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
+.content{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(70deg, #253b6e, #d2ecf9);
 }
