--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,13 +1,19 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="title">
     <ion-title>
-      Math Operations
+      Math Operations Jess & Juanse
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="content">
-    <app-math-operations-list></app-math-operations-list>
+
+<ion-content class="no-scroll">
+  <div class="hide">
+    <div class="content">
+      <span *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]"></span>
+      <div class="upper">
+        <app-math-operations-list></app-math-operations-list>
+      </div>
+    </div>
   </div>
 </ion-content>
