--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,8 +1,21 @@
 .content{
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   align-items: center;
   justify-content: center;
   background: linear-gradient(70deg, #253b6e, #d2ecf9);
+}
+
+.to-bottom {
+  margin-top: auto;
+}
+
+.middle {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
