Feat: US-1 US-2 Save math_operations to back

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -5,9 +5,8 @@ ion-col {
 
 .grid-width {
   max-width: 320px;
-  position: relative;
-  top: 15%;
-  margin: auto;
+  margin-top: 20px;
+  flex: none;
 }
 
 .background__image {
