--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -5,9 +5,8 @@ ion-col {
 
 .grid-width {
   max-width: 320px;
-  position: relative;
-  top: 15%;
-  margin: auto;
+  margin-top: 20px;
+  flex: none;
 }
 
 .background__image {
@@ -99,3 +98,19 @@ ion-toolbar {
   z-index: 400;
 }
 
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+ion-item{
+  --background: rgba(6,6,6, 0.6);
+  --color: #fff;
+  border-radius: 5px;
+}
+ion-input{
+  --background: transparent;
+}
