--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -110,3 +110,19 @@ ion-toolbar {
     background-size: initial;
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+ion-item{
+  --background: rgba(6,6,6, 0.6);
+  --color: #fff;
+  border-radius: 5px;
+}
+ion-input{
+  --background: transparent;
+}
