Style (US-2) fix lint

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
         <app-math-operations-list [items]="items?.data"></app-math-operations-list>
       </div>
       <div class="to-bottom">
-        <app-paginator [arrayLength]="items?.totalPages" (activePage)="changePage($event)"></app-paginator>
+        <app-paginator [_arrayLength]="items?.totalPages" (activePage)="changePage($event)"></app-paginator>
       </div>
     </div>
   </div>
