fix: fix little bugs

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
       <div class="upper">
         <app-math-operations-list [items]="items?.data"></app-math-operations-list>
       </div>
-      <div class="to-bottom">
+      <div class="to-bottom upper">
         <app-paginator [_arrayLength]="items?.totalPages" (activePage)="changePage($event)"></app-paginator>
       </div>
     </div>
