refactor: Update View of calculator tab

--- a/src/app/components/paginator/paginator.component.scss
+++ b/src/app/components/paginator/paginator.component.scss
@@ -1,7 +1,8 @@
 button {
     border-radius: 100%;
     margin: 10px 5px;
-    background: radial-gradient(circle, var(--ion-color-primary), var(--ion-color-primary));
+    background: #ec9770;
+    background: radial-gradient(circle, #ec9770, rgba(236,151,112,0.5));
     padding: 10px;
     color: #fff;
     width: 35px;
