--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,6 +10,7 @@
   <div class="hide">
   <div class="content">
     <div class="middle">
+      <!-- Made 20 spans that will be circles flaoting in background -->
       <span *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]"></span>
       <div class="upper">
         <app-math-operations-list [items]="items?.data"></app-math-operations-list>
