--- a/src/app/calculator/components/display/display.component.html
+++ b/src/app/calculator/components/display/display.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="displayValue">
-    <p>{{currentValue}}</p>
+    <p>{{currentValue?.math_operation}}</p>
   </div>
 </div>
