--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -17,16 +17,22 @@ ion-col {
 
 .demon-background {
   background-image: url("/assets/images/demon_sebastian.jpg")!important;
-  width: 100%;
-  height: 100%;
-  z-index: 400;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0px;
+  bottom: 0;
+  z-index: 300;
 }
 
 .god-background {
   background-image: url("/assets/images/god.jpg")!important;
-  width: 100%;
-  height: 100%;
-  z-index: 400;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0px;
+  bottom: 0;
+  z-index: 300;
 }
 
 ion-toolbar {
@@ -64,7 +70,7 @@ ion-toolbar {
   position: absolute;
   top: 0;
   left: 0;
-  right: 10px;
+  right: 0px;
   bottom: 0;
   z-index: 200;
 
