feat: :sparkles: Update save username on view to debounce input

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -18,7 +18,7 @@
       <div class="vertical-center">
         <ion-item>
           <ion-label position="stacked">Write your name in order to save your results!</ion-label>
-          <ion-input [(ngModel)]="name" (ionChange)="updateUsername()"></ion-input>
+          <ion-input #input></ion-input>
         </ion-item>
         <ion-grid class="grid-width">
           <ion-row class="ion-justify-content-center">
