--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,17 +8,18 @@
 
 <ion-content class="no-scroll">
   <div class="hide">
-  <div class="content">
-    <div class="middle">
-      <!-- Made 20 spans that will be circles flaoting in background -->
-      <span *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]"></span>
-      <div class="upper">
-        <app-math-operations-list [items]="items?.data"></app-math-operations-list>
+    <div class="content">
+      <div class="middle">
+        <!-- Made 20 spans that will be circles flaoting in background -->
+        <span *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]"></span>
+        <div class="upper">
+          <app-math-operations-list [items]="items?.data"></app-math-operations-list>
+        </div>
+        <div class="to-bottom upper">
+          <app-paginator [_totalItems]="items?.count" [pageSize]="items?.pageSize" (activePage)="changePage($event)">
+          </app-paginator>
+        </div>
       </div>
-      <div class="to-bottom upper">
-        <app-paginator [_arrayLength]="items?.totalPages" (activePage)="changePage($event)"></app-paginator>
-      </div>
-    </div>
     </div>
   </div>
 </ion-content>
